<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.hexian000.dynatweak.MainActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_introduction"/>

            <CheckBox
                android:id="@+id/checkMasterSwitch"
                    android:layout_width="match_parent"
                android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/app_master_switch" />

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/app_device_profile"/>

            <Spinner
                android:id="@+id/spinnerProfile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:entries="@array/interactive_profile"/>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/app_hotplug_profile"/>

            <Spinner
                android:id="@+id/spinnerHotplug"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:entries="@array/hotplug_profile"/>

            <Button
                android:id="@+id/buttonApply"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/apply_settings" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/app_additional_functions"
                android:textAlignment="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_service"/>

            <ToggleButton
                android:id="@+id/toggleService"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_monitor_overlay"/>

            <ToggleButton
                android:id="@+id/toggleMonitor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"/>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
